Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1247

After recovery 7 of 16 OST were deactivated by MDS.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Critical Critical
    • Lustre 2.3.0, Lustre 2.1.2
    • Lustre 2.2.0
    • None
    • 3
    • 4640

      When recovering from failure, 7 of the 16 OSTs on the system were deactivated on the MDS.
      The system was down for some hours. Then the fs was restarted (MDS rebooted), and after that, we saw:
      snxs2n001 kernel: [ 4557.366336] LustreError: 22332:0:(lov_obd.c:1071:lov_clear_orphans()) error in orphan recovery on OST idx 11/16: rc = -22
      snxs2n001 kernel: [ 4557.366343] LustreError: 22332:0:(mds_lov.c:880:__mds_lov_synchronize()) snxs2-OST000b_UUID failed at mds_lov_clear_orphans: -22
      snxs2n001 kernel: [ 4557.366348] LustreError: 22332:0:(mds_lov.c:901:__mds_lov_synchronize()) snxs2-OST000b_UUID sync failed -22, deactivating
      ...
      snxs2n004 kernel: [343022.475923] LustreError: 11898:0:(filter.c:3653:filter_handle_precreate()) snxs2-OST000b: ignoring bogus orphan destroy request: obdid 4710212 last_id 4730465
      snxs2n004 kernel: [343022.522962] Lustre: Skipped 5 previous similar messages

            wc-triage WC Triage
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: